--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,8 @@
     "lib": [
       "es2015",
       "dom"
-    ]
+    ],
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules",
